* 0.12.0 (unreleased)
   * Gameplay
      * Gave the Za'lek sting a slight detection buff
   * Quality of Life
      * Added colourblind correction mode
      * Exposed more colourblind options to the user
      * Can modify game speed directly instead of using a slow mode difficulty for accessibility
      * Messages get folded instead of repeating
      * Asteroids no longer fade out if close to the player
      * Display fuel consumption for ships in the equipment overlay
      * Added option to match speed with slowest ship in the fleet (on by default)
   * Engine
      * Stats (except inverted stats) are now additive instead of multiplicative
      * Try to merge saves if multiple directories correspond to the same player
      * Faster handling of asteroids with large exclusion areas
      * Added fuel_usage_mod ship stat.
      * Fixed player losing navigation targets when unidiff is applied
      * Fixed ai.idir giving wrong answer by M_PI_2 in some cases
      * Threaded more loading components
      * Lua require now caches chunks
      * Dropped SDL_image fallback
      * Support for Tracy
   * Fixes
      * PSO and Mizar nebulas have trails again

* 0.11.1 (unreleased)
   * Give all ammo back to player after doing obelisk
   * Fixed player being invincible after completing an obelisk
   * Fixed a crash when loading games while a landing hook was running
   * Fixed race condition in threadpool
   * Fixed asteroids spawning in not proper shapes
   * Fixed autonav wobble and overshooting
   * Point defense won't shoot at disabled pilots anymore
   * Fixed battery descriptions
   * Discovering a hidden jump will make both directions known
   * Fixed AI trying to scan hostile targets they lost track of
   * Properly save and load reward_value to and from saves
   * Fixed events and missions being able to trigger in obelisk tests
   * Fixed beam weapons not hitting asteroids
   * Properly compute weapon range with launch_range modifiers